# media-digital-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  log_conf.yaml  presentation.md  pyproject.toml  vllm.env.example
app/: config.py  db.py  llm.py  main.py
app/files/: router.py
app/retriever/: Dockerfile  client.py  server.py
app/routers/: conversion.py  files.py  home.py
app/static/css/: styles.css
app/static/css/components/: animations.css  base.css  files.css  layout.css  modal.css  search.css
app/templates/: base.html  chat_with_image.html  files.html  index.html  sidebar.html  slides.html
pybooks/: colpali-attention.ipynb  convert-to-pdf.ipynb  rag-demonstrate.ipynb  rag-target.ipynb  rag.ipynb  test-colpali.ipynb  test-vllm-request.ipynb  utils.py
retriever/: Dockerfile  client.py  server.py
tools/: convert-pdf.sh  make_submission.py  populate.py
