[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "media-digital-rag"
version = "0.0.0"
authors = []
description = "media-digital-rag web app"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
keywords = []
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^10.4.0"
matplotlib = "^3.9.2"
numpy = "<2.0"
fastapi = { extras = ["all"], version = "^0.115.0" }
pdf2image = "^1.17.0"
python-json-logger = "^2.0.7"
colorlog = "^6.8.2"
aiohttp = "^3.10.10"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = { version = "^0.25.1", extras = ["python"] }
mkdocs-material = "^9.5.28"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^2.17.0"
commitizen = "^3.27.0"
jupyter = "^1.1.1"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "E741", # Ambiguous variable name
]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-v", "--cache-clear", "-rf"]
console_output_style = "count"
python_classes = "Test"
python_files = "*_test.py"
python_functions = "*_test"
testpaths = ["tests"]
pythonpath = ["."]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:version", "app/__init__.py"]
